styling: removing JS calculated height and margin/padding and adding to CSS. This prevents the gap between nav and primaryHeader when scaling browser down

--- a/components/domain/Home/ShowcaseList/ShowcaseList.scss
+++ b/components/domain/Home/ShowcaseList/ShowcaseList.scss
@@ -11,8 +11,8 @@
 
   &--container {
     display: flex;
-    align-items: left;
-    justify-content: left;
+    align-items: flex-start;
+    justify-content: space-between;
     flex-direction: row;
     flex-wrap: wrap;
     flex-flow: row wrap;
