--- a/components/shared/PrimaryHeader/PrimaryHeader.scss
+++ b/components/shared/PrimaryHeader/PrimaryHeader.scss
@@ -10,6 +10,10 @@
     @include for-tablet-down {
       flex-flow: column nowrap;
     }
+
+    @include for-phone-only {
+      padding-block: var(--c-07);
+    }
   }
 
   h1 {
@@ -95,7 +99,7 @@
     padding: 0 0 0 var(--l-05);
 
     img {
-      max-width: 530px;
+      max-width: 450px;
       width: 85%;
 
       @include for-laptop-down {
